Added info for primary stylesheet

--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+/* Primary stylesheet for the San Joaquin Valley Town Hall website Author: Keiyon Tyler */
 /*this is a single-line comment */
 /* 
 this
